# control

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose-bridge.yml  docker-compose.yml  frames_2025-09-28_07.06.31.gv  saved_cloud.ply  setup_webots_controller.sh  start_ros2_bridge.sh
.devcontainer/: devcontainer.json
.github/workflows/: ros2-ci-cd.yml
src/box_detection/: CMakeLists.txt  README.md  package.xml
src/box_detection/include/box_detection/: box_detector_node.hpp  point_cloud_node.hpp
src/box_detection/launch/: box_detection_full.launch.py  detector_only.launch.py
src/box_detection/src/: box_detector_main.cpp  point_cloud_main.cpp
src/box_detection/src/box_detection/: box_detector_node.cpp  point_cloud_node.cpp
src/camera/: CMakeLists.txt  package.xml
src/camera/include/camera/: calibration_core.hpp
src/camera/src/: cam_handeye_node.cpp  cam_intrinsics_node.cpp
src/control_versions/: CMakeLists.txt  package.xml
src/control_versions/include/control_versions/: ur5_dynamics.hpp
src/control_versions/src/: ur5_cartesian_controller.cpp  ur5_cartesian_impedance_node.cpp  ur5_ekf_state_estimator_node.cpp  ur5_jointkf_node.cpp  ur5_mpc_torque_node.cpp  ur5_torque_controller_node.cpp
src/crtl_practice/: CMakeLists.txt  README.md  package.xml
src/crtl_practice/include/crtl_practice/: ur5_dynamics.hpp  ur5_kin_helpers.hpp
src/crtl_practice/src/: cartesian_impedance_node.cpp  computed_torque_node.cpp  kinematic_resolved_rate_node.cpp  pid_joint_node.cpp
src/ur5_moveit_planner/: CMakeLists.txt  package.xml
src/ur5_moveit_planner/src/: ur5_moveit_object.cpp  ur5_moveit_pickplace.cpp  ur5_moveit_planner_node.cpp  ur5_moveit_quickstart.cpp
